--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -17,7 +17,7 @@ en:
     #   user:
     #     new:
     #       email: 'E-mail to sign in.'
-    #     edit:
+    #     editchar:
     #       email: 'E-mail.'
     # hints:
     #   defaults:
